array.island.Island.scala.error
Erreur de compilation :
Island:2: error: type mismatch;
 found   : Unit
 required: Int
def island(num:Array[Int]): Int = {
                                  ^